@@ -1,3 +1,12 @@
+2005-10-23  Sam Steingold  <sds@gnu.org>
+
+	* modules/clx/new-clx/clx.f (XLIB:CHANGE-KEYBOARD-MAPPING)
+	(XLIB:SHAPE-EXTENTS, XLIB:SHAPE-RECTANGLES, XLIB:DEFAULT-KEYSYM-INDEX)
+	(XLIB:KEYBOARD-MAPPING, XLIB:KEYSYM-NAME, XLIB:KEYCODE->CHARACTER):
+	implemented
+	* modules/clx/new-clx/clx.lisp (gcontext): added a %timestamp slot
+	for the sake of clue/clio
+
 2005-10-22  Sam Steingold  <sds@gnu.org>
 
 	* screen.lisp (*new-window*, read-keyboard-char): removed
